--- a/public/css/login.styl
+++ b/public/css/login.styl
@@ -30,7 +30,8 @@
 		margin: 0 auto;
 		background-color:#FFF;
 		border-radius: 50%;
-		
+		border-bottom: 8px solid theme-color;
+				
 		md-icon{
 			color: theme-color;
 			width: 64px;
