--- a/public/ng/views/pages/admin/dish/list.html
+++ b/public/ng/views/pages/admin/dish/list.html
@@ -3,7 +3,7 @@
         <h3>Manage Dishes</h3>
         <span flex></span>
         <md-button ng-click="dishList.addDish()">
-            <md-icon class="big-icon" md-svg-icon="add" title="Add New Dish"></md-icon>
+            <md-icon class="normal-icon" md-svg-icon="add" title="Add New Dish"></md-icon>
         </md-button>
     </div>
 </md-toolbar>
