--- a/public/ng/views/pages/admin/theme/edit.html
+++ b/public/ng/views/pages/admin/theme/edit.html
@@ -4,7 +4,7 @@
             <h4>Theme Info</h4>
             <span flex></span>
             <md-button ng-click="themeEdit.update()">
-                <md-icon md-svg-icon="check" class="big-icon status-normal" ng-class="{'status-success': themeEdit.updateSuccess}"></md-icon>
+                <md-icon md-svg-icon="check" class="normal-icon status-normal" ng-class="{'status-success': themeEdit.updateSuccess}"></md-icon>
             </md-button>
         </div>
     </md-toolbar>
@@ -49,7 +49,7 @@
             <h4>Components</h4>
             <span flex></span>
             <md-button ng-click="themeEdit.update()">
-                <md-icon md-svg-icon="check" class="big-icon status-normal" ng-class="{'status-success': themeEdit.updateSuccess}"></md-icon>
+                <md-icon md-svg-icon="check" class="normal-icon status-normal" ng-class="{'status-success': themeEdit.updateSuccess}"></md-icon>
             </md-button>
         </div>
     </md-toolbar>
