--- a/public/ng/views/pages/user/me.html
+++ b/public/ng/views/pages/user/me.html
@@ -12,7 +12,7 @@
             </md-button>
         </div>
         <div layout>
-            <md-button flex ng-click="profile.newRecipt()" class="md-raised md-primary no-margin-btn">Share New Recipt</md-button>
+            <md-button flex ng-href="/share" class="md-raised md-primary no-margin-btn">Share New Recipt</md-button>
         </div>
         <div flex>
         </div>
