--- a/public/ng/views/templates/socialShares.html
+++ b/public/ng/views/templates/socialShares.html
@@ -1,11 +1,11 @@
 <div layout class="social-shares-container" layout-align="start center">
     <md-button id="btnFB" aria-label="facebook" class="md-icon-button">
-        <md-icon md-svg-icon="facebook" class="social-icon"></md-icon>
+        <md-icon md-svg-icon="facebook" class="normal-icon light-icon"></md-icon>
     </md-button>
     <md-button id="btnTwitter" aria-label="twitter" class="md-icon-button">
-        <md-icon md-svg-icon="twitter" class="social-icon"></md-icon>
+        <md-icon md-svg-icon="twitter" class="normal-icon light-icon"></md-icon>
     </md-button>
     <md-button id="btnPinterest" aria-label="pinterest" class="md-icon-button">
-        <md-icon md-svg-icon="pinterest" class="social-icon"></md-icon>
+        <md-icon md-svg-icon="pinterest" class="normal-icon light-icon"></md-icon>
     </md-button>
 </div>
