--- a/public/ng/views/pages/dish/share.html
+++ b/public/ng/views/pages/dish/share.html
@@ -1,20 +1,20 @@
-<div layout layout-fill class="full-height-content page-hero recipt-share-hero">
+<div layout layout-fill class="full-height-content page-hero blur-hero recipt-share-hero">
     <div flex="60" layout="column" layout-align="center center">
         <h2 class="md-display-1">Share your recipts, Share your taste</h2>
         <h3>Your delicious memory needs an elegant page to be placed.</h3>
     </div>
     <div flex layout="column" class="share-right-col">
-        <div ng-if="share.isLogined" flex="60" layout="column" layout-align="end" class="">
+        <form ng-if="share.isLogined" flex layout="column" layout-align="center" name="formCreate" ng-submit="formCreate.$valid && share.create()" novalidate class="share-recipt-form">
             <p class="md-subhead">What's your secrect recipt name?</p>
-            <form layout name="formCreate" ng-submit="formCreate.$valid && share.create()" novalidate class="share-recipt-form">
-                <input flex="80" required name="name" ng-model="share.newReciptName">
-                <md-button type="submit" flex class="md-icon-button" ng-class="{'md-primary': formCreate.$valid}">
-                    <md-icon md-svg-icon="send" class="medium-icon light-icon"></md-icon>
-                </md-button>
-            </form>
-        </div>
+            <input autofocus required name="name" ng-model="share.newRecipt.name">
+            <p class="md-subhead">What does your work look like?</p>
+            <div class="new-recipt-image" style="background-image: url('{{share.newRecipt.imageUrl}}')">
+                <image-upload image="share.newRecipt.imageUrl"></image-upload>
+            </div>
+            <md-button type="submit" ng-disabled="formCreate.$invalid || share.newRecipt.imageUrl == ''" class="md-primary">Submit</md-button>
+        </form>
         <div ng-if="!share.isLogined" ng-controller="LoginController as login" class="" flex layout="column" layout-align="center">
-            <div class="login-container" ng-if="share.showLogin">
+            <div class="login-container animate-if" ng-if="share.showLogin">
                 <p class="md-subhead">Login to your account and start sharing</p>
                 <form name="formLogin" ng-submit="formLogin.$valid && login.login()" novalidate class="share-login-form">
                     <input type="email" placeholder="Email" ng-focus="login.loginFailed=false" required name="email" ng-model="login.email">
@@ -30,10 +30,10 @@
                     <md-button flex md-theme="blue" ng-click="login.fbLogin()" class="md-raised md-primary">
                         Facebook
                     </md-button>
-                    <md-button class="hero-btn" flex ng-click="share.showLogin=false">Sign Up</md-button>
+                    <md-button class="hero-btn" flex ng-click="share.toggleLogin(false)">Sign Up</md-button>
                 </div>
             </div>
-            <div class="signUp-container" ng-if="!share.showLogin">
+            <div class="signUp-container animate-if" ng-if="share.showSignUp">
                 <p class="md-subhead">Create an account to store your taste</p>
                 <form layout="column" name="formSignUp" ng-submit="formSignUp.$valid && login.signUp()" novalidate class="share-signUp-form">
                     <input placeholder="Nick name" ng-focus="login.loginFailed=false" required name="username" ng-model="login.userName">
@@ -48,38 +48,10 @@
                         Facebook
                     </button>
                     <p class="md-caption">Already have an account?
-                        <md-button class="md-primary" ng-click="share.showLogin=true">Login</md-button>
+                        <md-button class="md-primary" ng-click="share.toggleLogin(true)">Login</md-button>
                     </p>
                 </form>
             </div>
         </div>
-        <div flex ng-if="share.isLogined">
-        </div>
-        <!-- 
-        <form name="formLogin" ng-submit="login.login()" novalidate>
-            <md-input-container class="md-block">
-                <md-icon md-svg-icon="email"></md-icon>
-                <input type="email" placeholder="Email" required name="email" ng-model="login.email">
-                <div ng-messages="formLogin.email.$error" ng-if="formLogin.email.$dirty || formLogin.$submitted">
-                    <div ng-message="required">Email is required.</div>
-                    <div ng-message="email">Email is invalid.</div>
-                </div>
-            </md-input-container>
-            <md-input-container class="md-block">
-                <md-icon md-svg-icon="lock"></md-icon>
-                <input type="password" required name="password" placeholder="Password" ng-model="login.password">
-                <div ng-messages="formLogin.password.$error" ng-if="formLogin.password.$dirty || formLogin.$submitted">
-                    <div ng-message="required">Password is required.</div>
-                </div>
-            </md-input-container>
-            <md-input-container>
-                <md-button flex class="md-raised md-primary">Log In</md-button>
-            </md-input-container>
-        </form>
-        <md-input-container flex md-theme="blue">
-            <md-button ng-click="login.fbLogin()" class="md-raised md-primary">
-                Facebook
-            </md-button>
-        </md-input-container> -->
     </div>
 </div>
