fb login and social share

--- a/public/css/mixins.styl
+++ b/public/css/mixins.styl
@@ -4,6 +4,8 @@ main-font = "open sans", sans-serif
 
 accent-font = "Montserrat", sans-serif
 
+handwriting-font = "Reenie Beanie", cursive
+
 default-font-size = 1em
 
 sm-font-size = 0.8em
