--- a/public/ng/views/pages/dish/edit.html
+++ b/public/ng/views/pages/dish/edit.html
@@ -1,25 +1,13 @@
-<div layout="column" layout-align="end" layout-fill class="full-height-content page-hero blur-hero" style="background-image: url('{{dishManage.dish.imageUrl}}')">
-    <div flex="80" layout>
-        <div flex layout="column" layout-align="center start" layout-margin layout-padding>
-            <form>
-                <p class="md-body-2">What's in your mind while cooking? Any story behind this recipt?</p>
-                <div class="dish-blog-container">
-                    <p contenteditable ng-model="dishManage.dish.blog"></p>
-                </div>
-                <p class="md-body-2">Input some key words about the recipt for easy seaching</p>
-                <div layout>
-                    <md-chips ng-model="dishManage.dish.tags" placeholder="Enter a tag" secondary-placeholder="+Tag" delete-button-label="Remove Tag"></md-chips>
-                </div>
-            </form>
-        </div>
-        <div flex layout layout-align="start center" layout-margin layout-padding>
-            <form flex="90">
+<div class="full-height-content page-hero blur-hero" style="background-image: url('{{dishManage.dish.imageUrl}}')" ng-cloak>
+    <div layout layout-align="center" class="recipt-info-edit">
+        <div flex="50" layout ng-class="{'recipt-form-block': dishManage.wizardMode, 'left-panel' : dishManage.showLeftPanel}">
+            <form flex layout="column" layout-margin layout-padding layout-align="end" name="formReciptBasic" ng-submit="formReciptBasic.$valid && dishManage.submitNext(formReciptBasic.$dirty)">
                 <md-input-container>
-                    <label>Name</label>
-                    <input ng-model="dishManage.dish.name">
+                    <label>Name (required)</label>
+                    <input required ng-model="dishManage.dish.name">
                 </md-input-container>
-                <div layout layout-margin>
-                    <div flex>
+                <div layout="row" layout-align="space-between start">
+                    <div flex="40">
                         <md-input-container flex>
                             <label>Prep Time(min)</label>
                             <input ng-model="dishManage.dish.prepTime">
@@ -32,147 +20,61 @@
                             <md-option ng-repeat="item in dishManage.difficulties" value="{{$index+1}}">{{item}}</md-option>
                         </md-select>
                     </div>
-                    <div flex>
+                    <div flex="50">
                         <p class="md-caption">Main Ingredients</p>
                         <div layout>
                             <md-chips ng-model="dishManage.dish.ingredients" placeholder="+Ingredient" secondary-placeholder="+Ingredient" delete-button-label="Remove Ingredient"></md-chips>
                         </div>
                     </div>
                 </div>
+                <div layout>
+                    <md-button type="submit" class="hero-btn" ng-disabled="formReciptBasic.$invalid">{{dishManage.wizardMode? 'Next' : 'Save'}}
+                    </md-button>
+                </div>
+            </form>
+        </div>
+        <div flex="50" layout ng-class="{'recipt-form-block': dishManage.wizardMode, 'right-panel': dishManage.showRightPanel}">
+            <form flex name="formReciptExtra" layout="column" layout-margin layout-padding ng-submit="dishManage.submitNext(formReciptExtra.$dirty)">
+                <p class="md-body-2">What's in your mind while cooking? Any story behind this recipt?</p>
+                <div class="dish-blog-container">
+                    <textarea ng-model="dishManage.dish.blog" ng-trim="true"></textarea>
+                </div>
+                <p class="md-body-2">Input some key words about the recipt for easy seaching</p>
+                <div layout>
+                    <md-chips ng-model="dishManage.dish.tags" placeholder="Enter a tag" secondary-placeholder="+Tag" delete-button-label="Remove Tag"></md-chips>
+                </div>
+                <div layout layout-align="end" class="bottom-btn-container">
+                    <md-button type="submit" class="hero-btn">{{dishManage.wizardMode? 'Next' : 'Save'}}
+                    </md-button>
+                </div>
             </form>
         </div>
     </div>
-    <div flex layout layout-align="center center">
-        <md-button class="hero-btn" ng-click="dishManage.hideBottomSheet=false">Upload Photos</md-button>
-        <md-button class="hero-btn solid-btn">Enter Instructions</md-button>
+    <div ng-show="!dishManage.wizardMode || dishManage.showHeroButtons" layout layout-align="center center" class="hero-btn-container">
+        <md-button class="hero-btn" ng-click="dishManage.showBottomSheet=true">Upload Photos</md-button>
+        <md-button ng-href="/me/dishes/{{dishManage.dish._id}}/instructions" class="hero-btn solid-btn">Enter Instructions</md-button>
     </div>
-    <div layout="column" class="recipt-edit-bottomsheet" ng-class="{'slide-down': dishManage.hideBottomSheet}">
+    <div layout="column" class="recipt-edit-bottomsheet" ng-class="{'slide-up': dishManage.showBottomSheet}">
         <div layout>
             <p flex class="md-subhead">Upload extra photos to show off your recipt</p>
-            <md-button flex class="md-icon-button md-primary" ng-click="dishManage.hideBottomSheet = true">
+            <md-button flex class="md-icon-button md-primary" ng-click="dishManage.submitPhotos()">
                 <md-icon md-svg-icon="arrow-down" class="medium-icon"></md-icon>
             </md-button>
             <span flex></span>
         </div>
-        <div flex="40" layout layout-margin layout-wrap>
-            <div flex style="background-image:url('{{dishManage.dish.imageUrl}}')" class="new-recipt-image">
-                <image-upload image="dishManage.dish.imageUrl"></image-upload>
+        <div flex layout layout-margin>
+            <div flex layout="column" layout-align="center">
+                <div layout="column" flex style="background-image:url('{{dishManage.dish.imageUrl}}')" class="new-recipt-image">
+                    <image-upload image="dishManage.dish.imageUrl"></image-upload>
+                </div>
+                <md-button class="md-primary">Main Image</md-button>
             </div>
-            <div flex ng-repeat="photo in dishManage.dish.photos track by $index" style="background-image:url'{{photo}}'" class="new-recipt-image">
-                <image-upload image="photo"></image-upload>
+            <div flex ng-repeat="photo in dishManage.dish.photos track by $index" layout="column" layout-align="center">
+                <div flex layout="column" style="background-image:url('{{photo}}')" class="new-recipt-image">
+                    <image-upload image="dishManage.dish.photos[$index]"></image-upload>
+                </div>
+                <md-button ng-click="dishManage.removePhoto($index)">Remove</md-button>
             </div>
         </div>
     </div>
 </div>
-<!-- <div layout="column" layout-margin layout-padding>
-    <md-toolbar md-scroll-shrink class="page-top-bar">
-        <div class="md-toolbar-tools">
-            <h4>Dish Info</h4>
-            <span flex></span>
-            <md-button ng-click="dishManage.saveDish()" aira-label="save">
-                <md-icon md-svg-icon="check" class="normal-icon status-normal" ng-class="{'status-success': dishManage.updateSuccess}"></md-icon>
-            </md-button>
-        </div>
-    </md-toolbar>
-    <div layout="row" layout-sm="column" layout-padding>
-        <div flex="40" layout="column" layout-padding>
-            <md-input-container>
-                <label>Main Image</label>
-                <input ng-model="dishManage.dish.imageUrl">
-            </md-input-container>
-            <div>
-                <img ng-src="{{dishManage.dish.imageUrl}}" class="responsive-img" />
-            </div>
-        </div>
-        <div flex layout="column">
-            <div flex="50">
-                <md-input-container>
-                    <label>Name</label>
-                    <input ng-model="dishManage.dish.name">
-                </md-input-container>
-                <div layout>
-                    <md-input-container flex>
-                        <label>Prep Time(min)</label>
-                        <input ng-model="dishManage.dish.prepTime">
-                    </md-input-container>
-                    <md-input-container flex>
-                        <label>Total Time(min)</label>
-                        <input ng-model="dishManage.dish.totalTime">
-                    </md-input-container>
-                </div>
-                <md-select placeholder="Difficulty" ng-model="dishManage.dish.difficulty">
-                    <md-option ng-repeat="item in dishManage.difficulties" value="{{$index+1}}">{{item}}</md-option>
-                </md-select>
-            </div>
-            <div layout>
-                <md-chips ng-model="dishManage.dish.tags" placeholder="Enter a tag" secondary-placeholder="+Tag" delete-button-label="Remove Tag"></md-chips>
-            </div>
-            <div layout>
-                <md-chips ng-model="dishManage.dish.ingredients" placeholder="+Ingredient" secondary-placeholder="+Ingredient" delete-button-label="Remove Ingredient"></md-chips>
-            </div>
-        </div>
-    </div>
-    <div layout layout-padding>
-        <md-input-container flex>
-            <label>Blog</label>
-            <textarea ng-model="dishManage.dish.blog" columns="1" class="blog-text md-body-1"></textarea>
-        </md-input-container>
-    </div>
-</div>
-<div layout="column" layout-margin layout-padding>
-    <md-toolbar>
-        <div class="md-toolbar-tools">
-            <h4>Photos</h4>
-            <span flex></span>
-            <md-button ng-click="dishManage.showAddPhotoDialog($event)" aira-label="add photo">
-                <md-icon md-svg-icon="add" class="normal-icon"></md-icon>
-            </md-button>
-        </div>
-    </md-toolbar>
-    <md-content>
-        <div layout layout-wrap layout-algin="start start">
-            <div ng-repeat="photo in dishManage.dish.photos" class="md-padding photo-edit-container" flex-sm="50" flex-gt-sm="33">
-                <md-input-container md-no-float>
-                    <input ng-model="dishManage.dish.photos[$index]" placeholder="photo {{$index+1}}">
-                </md-input-container>
-                <div class="component-img-container component-mask">
-                    <md-button class="md-icon-button" ng-click="dishManage.removePhoto($index)" aria-label="delete photo">
-                        <md-icon md-svg-icon="delete"></md-icon>
-                    </md-button>
-                    <img ng-src="{{dishManage.dish.photos[$index]}}" class="responsive-img" />
-                </div>
-            </div>
-        </div>
-    </md-content>
-</div>
-<div layout="column" layout-margin layout-padding>
-    <md-toolbar>
-        <div class="md-toolbar-tools">
-            <h4>Instructions</h4>
-            <span flex></span>
-            <md-button ng-click="dishManage.showAddInstructionDialog($event)" aira-label="add instruction">
-                <md-icon md-svg-icon="add" class="normal-icon"></md-icon>
-            </md-button>
-        </div>
-    </md-toolbar>
-    <md-content>
-        <div layout layout-wrap layout-algin="start start">
-            <div ng-repeat="instruction in dishManage.dish.instructions" class="md-padding photo-edit-container" flex-sm="100" flex-gt-sm="50">
-                <md-input-container md-no-float>
-                    <input ng-model="dishManage.dish.instructions[$index].photo" placeholder="step {{$index}} photo"></input>
-                </md-input-container>
-                <div class="component-img-container component-mask">
-                    <img ng-src="{{dishManage.dish.instructions[$index].photo}}" class="responsive-img" />
-                    <md-button class="md-icon-button" ng-click="dishManage.removeInstruction($index)" arial-label="delete instruction">
-                        <md-icon md-svg-icon="delete"></md-icon>
-                    </md-button>
-                </div>
-                <md-input-container>
-                    <label>Step {{$index +1}}</label>
-                    <textarea ng-model="dishManage.dish.instructions[$index].text" columns="1" class="blog-text md-body-1"></textarea>
-                </md-input-container>
-            </div>
-        </div>
-    </md-content>
-</div>
- -->
