--- a/public/css/base.styl
+++ b/public/css/base.styl
@@ -8,6 +8,16 @@ html, body{
 	color: dark-font-color;
 }
 
+textarea{
+	outline: none;
+	resize: none;
+	height: 100%;
+	width: 100%;
+	border: 0;
+	background: none;
+	color: dark-font-color;
+}
+
 .warn-color{
 	color: warn-color;
 }
@@ -74,6 +84,7 @@ html, body{
 .full-height-content{
 	height:100%;
 	min-height:100%;
+	overflow: hidden;
 }
 
 .info-badge{
@@ -106,9 +117,25 @@ html>body .full-height-content{
 }
 
 .logo-link{
-	width:50px;
-	height:50px;
-	margin-left:30px;
+	min-width:58px;
+	display:block;
+	border-radius: 50%;
+	border-bottom: 4px solid theme-color;
+	margin: auto 20px;
+	padding-bottom: 4px;
+		
+	md-icon{
+		width: 40px;
+		height: 40px;
+	}
+}
+
+.primary-bar .logo-link{
+	border-color: #FFF;
+	
+	md-icon{
+		color: #FFF;
+	}
 }
 
 .top-menu-bar{
@@ -124,11 +151,6 @@ html>body .full-height-content{
 	
 	.md-headline{
 		font-weight:bold;
-	}
-	md-icon{
-		height:48px;
-		width:48px;
-		color:light-font-color;
 	}
 }
 
@@ -394,10 +416,12 @@ html>body .full-height-content{
 	content: '';
 	position: absolute;
 	background: inherit;
-	width: 100%;
-	height: 100%;
-	filter: blur(10px);
-	-webkit-filter: blur(10px) brightness(0.55);
+	filter: blur(15px);
+	left: -15px;
+	right: -15px;
+	top: -15px;
+	bottom: -15px;
+	-webkit-filter: blur(15px) brightness(0.45);
 }
 
 .blur-hero>*{
@@ -561,7 +585,11 @@ html>body .full-height-content{
 }
 
 .status-success{
-	color:#12B55E!important;
+	background-color:#12B55E;
+}
+
+.status-error{
+	background-color: warn-color;
 }
 
 .status-normal{
