--- a/public/css/dish-edit.styl
+++ b/public/css/dish-edit.styl
@@ -3,15 +3,110 @@
 .recipt-edit-bottomsheet{
 	position: absolute;
 	background-color: rgba(0,0,0,0.8);
-	bottom: 0;
+	bottom: -400px;
 	height: 400px;
-	transition: bottom 1.2s ease;
+	transition: bottom .8s ease-in-out;
+	width: 100%;
+	
+	&>div:first-child{
+		height:64px;
+	}
 	
 	p{
 		padding-left: 16px;
 	}
+	
+	.new-recipt-image{
+		width:auto;
+		height:auto;
+	}
 }
 
-.slide-down{
-	bottom: -400px;
+.recipt-info-edit{
+	position: relative;
+	height:450px;
+	margin-top: 120px;
 }
+
+.recipt-form-block{
+	transition all 0.7s ease;
+	opacity: 0;
+	position: absolute;
+	right: -50%;
+	width: 50%;
+	
+	&.left-panel{
+		right: 50%;
+		opacity: 1;
+	}
+	
+	&.right-panel{
+		right: 0;
+		opacity: 1;
+	}
+}
+
+.bottom-btn-container{
+	width: 100%;
+}
+
+form[name="formReciptBasic"], form[name="formReciptExtra"]{
+	height: 100%;
+	min-height: 400px;
+	
+	.hero-btn{
+		width: 80px;
+		border-color: light-font-color;
+		color: light-font-color;
+	}
+	
+	input.ng-invalid.ng-touched{
+		border-bottom: 1px solid warn-color;
+	}
+}
+
+form[name="formReciptExtra"] .dish-blog-container{
+	max-width: none;
+	height: 180px;
+	padding-bottom: 20px;
+	box-sizing: border-box;
+	
+	textarea{
+		color: light-font-color;
+	}
+}
+
+
+.slide-up{
+	bottom: 0;
+}
+
+.hero-btn-container{
+	margin-top: 10px;
+	height: 80px;
+	//display: none;
+}
+
+.blur-hero {
+	md-input-container:not(.md-input-invalid).md-input-has-value label {
+		color: light-font-color;
+	}
+	
+	md-input-container label{
+		color: rgba(250,250,250,0.5);
+	}
+
+	md-input-container .md-input{
+		color:light-font-color;
+		border-color: light-font-color;
+	}
+	
+	md-select .md-select-value{
+		border-color: light-font-color;
+	}
+	
+	.md-chip-input-container input{
+		color:light-font-color;
+	}
+}	
+
