--- a/public/css/dish-instruction.styl
+++ b/public/css/dish-instruction.styl
@@ -2,23 +2,46 @@
 
 .instruction-container{
 	position: relative;	
-}
-
-.instruction-title-bar{
-	background-color: rgba(0,0,0,0.7);
-	color: #F2F2F2;
-	z-index: 10;
-	position: absolute;
-	bottom: 120px;
-	left:0;
-	width: 100%;
 	
-	a{
-		text-decoration: none;
-		border-bottom: 1px solid rgba(250, 250, 250, 0.3);
-		color: #F2F2F2;
+	.sticky-note-container{
+		right: 40px;
+		top: 100px;
+		position: absolute;
+		margin:0;
+	}
+	
+	.bottom-content{
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		background-color: rgba(0,0,0,0.7);
+		z-index: 10;
+		color: light-font-color;
+		
+		.title-bar{
+			width: 100%;
+			
+			a{
+				text-decoration: none;
+				border-bottom: 1px solid rgba(250, 250, 250, 0.3);
+				color: light-font-color;
+			}
+		}
+
+		.text-container{
+			height: 120px;
+			padding: 10px 30px;
+		}
+		
+		.nav-btn{
+			md-icon{
+				color: rgba(250,250,250, .3);
+			}
+		}
 	}
 }
+
 
 .dish-instruction-hero{
 	position: absolute;
@@ -32,13 +55,6 @@
 	background-attachment: fixed;
 	background-color: grey-background-color;
 	transition: all 1s linear;
-		
-		.text-container{
-			height: 120px;
-			background-color: rgba(0,0,0,0.7);
-			color:light-font-color;
-			padding: 10px 30px;
-		}
 }
 
 .dish-instruction-hero.pre{
