--- a/public/ng/views/index.html
+++ b/public/ng/views/index.html
@@ -19,13 +19,14 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 
 <body ng-app="spicyTaste" layout-fill ng-controller="MainController as main" ng-cloak>
     <div class="top-menu-bar animation-block" layout="row" ng-hide="main.menuBar.hidden" ng-class="{'primary-bar': main.menuBar.primaryTheme}" layout-align="center center">
-        <a ng-href="/" class="logo-link">
-            <!-- <img src="images/logo.png" alt="spicy taste" class="responsive-img"></img> -->
-        </a>
+        <md-button ng-href="/" class="logo-link">
+            <md-icon md-svg-icon="restaurants" class="md-primary"></md-icon>
+        </md-button>
         <span class="md-headline center-text">{{main.menuBar.text}}</span>
         <span flex></span>
         <section layout="row" class="main-menu">
@@ -34,7 +35,7 @@
             <md-button ng-href="/share">Share</md-button>
         </section>
         <md-button ng-if="!currentUser" ng-class="{'md-primary' : !main.menuBar.primaryTheme}" ng-click="showLoginDialog($event)">
-            <md-icon md-svg-icon="login" class=""></md-icon>
+            <md-icon md-svg-icon="login" class="normal-icon"></md-icon>
         </md-button>
         <md-button ng-if="currentUser" ng-href="/me">
             <img ng-src="{{currentUser.photoUrl}}" class="avatar avatar-big" alt="{{currentUser.userName}}">
