login and pinterest

--- a/public/css/me.styl
+++ b/public/css/me.styl
@@ -11,6 +11,18 @@
 	}
 }
 
+.profile-photo-container{
+	padding-bottom: 70%;
+	background-color: grey-background-color;
+	background-size: cover;
+	background-position:center;
+	background-repeat: no-repeat;
+	
+	.image-upload-container{
+		min-height: 100%;
+	}
+}
+
 .profile-left-col{
 	padding-top:64px;
 }
