--- a/public/ng/views/pages/dish/show.html
+++ b/public/ng/views/pages/dish/show.html
@@ -3,7 +3,7 @@
         <div layout="column" layout-align="start center" flex="60">
             <div layout layout-align="center center" class="dish-title">
                 <h3 class="md-display-1 accent-font">{{dishShow.dish.name}}</h3>
-                <md-button class="md-icon-button" ng-class="{'md-primary': dishShow.dish.isCollected}" ng-click="!dishShow.dish.isCollected && dishShow.collect()">
+                <md-button class="md-icon-button" ng-class="{'md-primary': dishShow.dish.isCollected}" ng-click="!dishShow.dish.isCollected && dishShow.collect($event)">
                     <md-icon md-svg-icon="favorite" class="medium-icon light-icon"></md-icon>
                 </md-button>
             </div>
