correct recipe typo in html

--- a/public/ng/views/index.html
+++ b/public/ng/views/index.html
@@ -30,7 +30,7 @@
         <span class="md-headline center-text">{{main.menuBar.text}}</span>
         <span flex></span>
         <section layout="row" class="main-menu">
-            <md-button ng-href="/recipts">Recipts</md-button>
+            <md-button ng-href="/recipts">Recipes</md-button>
             <md-button ng-href="/themes">Themes</md-button>
             <md-button ng-href="/share">Share</md-button>
         </section>
