--- a/public/ng/views/pages/dish/share.html
+++ b/public/ng/views/pages/dish/share.html
@@ -1,6 +1,6 @@
 <div layout layout-fill class="full-height-content page-hero blur-hero recipt-share-hero">
     <div flex="60" layout="column" layout-align="center center">
-        <h2 class="md-display-1">Share your recipts, Share your taste</h2>
+        <h2 class="md-display-1">Share your recipes, Share your taste</h2>
         <h3>Your delicious memory needs an elegant page to be placed.</h3>
     </div>
     <div flex layout="column" class="share-right-col">
