--- a/public/ng/views/pages/home.html
+++ b/public/ng/views/pages/home.html
@@ -4,7 +4,7 @@
         <md-button class="hero-btn" ng-href="/share">Share Mine</md-button>
     </div>
     <div flex layout="column" layout-align="end center" class="see-more-container">
-        <p>Check out the recent recipts</p>
+        <p>Check out the recent recipes</p>
         <md-button scroll-to="#divBottom" class="bounce md-fab md-primary">
             <md-icon md-svg-icon="arrow-down" class="initial-icon"></md-icon>
         </md-button>
