--- a/public/ng/views/pages/user/me.html
+++ b/public/ng/views/pages/user/me.html
@@ -12,7 +12,7 @@
             </md-button>
         </div>
         <div layout>
-            <md-button flex ng-href="/share" class="md-raised md-primary no-margin-btn">Share New Recipt</md-button>
+            <md-button flex ng-href="/share" class="md-raised md-primary no-margin-btn">Share New Recipe</md-button>
         </div>
         <div flex>
         </div>
@@ -57,7 +57,7 @@
                 <md-tab-body>
                     <md-content layout layout-wrap>
                         <div class="layout-padding" ng-if="profile.reciptsCount == 0">
-                            <p>You haven't shared any recipt yet.</p>
+                            <p>You haven't shared any recipe yet.</p>
                             <p>Dont' be shy, and go ahead write down your yummy memory <a href="/share">HERE.</a></p>
                         </div>
                         <div ng-if="showSpinner" class="spinner-container" layout layout-align="center center">
